--- a/Form/form.html
+++ b/Form/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skelbiu.lt</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./form.css" />
   </head>
   <body>
     <header>
@@ -24,8 +24,16 @@
       </nav>
     </header>
     <main>
-      <div id="cards-container"></div>
+      <h3>Įdėkite savo skelbimą</h3>
+      <form>
+        <input type="text" placeholder="Automobilio markė" />
+        <input type="text" placeholder="Kaina" />
+        <input type="text" placeholder="Nuotraukos URL" />
+        <input type="text" placeholder="Aprašymas" />
+        <input type="text" placeholder="Miestas" />
+        <button>Patalpinti</button>
+      </form>
     </main>
-    <script src="./script.js"></script>
+    <script src="./form.js"></script>
   </body>
 </html>
